// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`org/parser parses empty document 1`] = `
type: "root"
children: []
`;

exports[`org/parser parses empty lines before first paragraph 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "text"
            value: "hi"
`;

exports[`org/parser parses initial section 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "text"
            value: "hello\\n"
  - type: "headline"
    level: 1
    title:
      - type: "text"
        value: "hi"
    children: []
`;

exports[`org/parser parses link 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "link"
            linkType: "http"
            rawLink: "http://example.com"
            children: []
`;

exports[`org/parser parses link after text 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "text"
            value: "some text "
          - type: "link"
            linkType: "fuzzy"
            rawLink: "link"
            children:
              - type: "text"
                value: "text"
`;

exports[`org/parser parses link mixed with text 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "text"
            value: "hello "
          - type: "link"
            linkType: "http"
            rawLink: "http://example.com"
            children: []
          - type: "text"
            value: " blah"
`;

exports[`org/parser parses link with no text 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "link"
            linkType: "fuzzy"
            rawLink: "link"
            children: []
`;

exports[`org/parser parses list after paragraph 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "text"
            value: "hello\\n"
      - type: "plain-list"
        indent: 0
        children:
          - type: "item"
            indent: 0
            children:
              - type: "paragraph"
                children:
                  - type: "text"
                    value: "list"
`;

exports[`org/parser parses multiple headlines 1`] = `
type: "root"
children:
  - type: "headline"
    level: 1
    title:
      - type: "text"
        value: "Hello"
    children: []
  - type: "headline"
    level: 1
    title:
      - type: "text"
        value: "World"
    children: []
  - type: "headline"
    level: 1
    title:
      - type: "text"
        value: "blah"
    children: []
`;

exports[`org/parser parses nested headlines 1`] = `
type: "root"
children:
  - type: "headline"
    level: 1
    title:
      - type: "text"
        value: "hi"
    children:
      - type: "headline"
        level: 2
        title:
          - type: "text"
            value: "there"
        children:
          - type: "headline"
            level: 3
            title:
              - type: "text"
                value: "how"
            children: []
  - type: "headline"
    level: 1
    title:
      - type: "text"
        value: "are"
    children:
      - type: "headline"
        level: 3
        title:
          - type: "text"
            value: "you"
        children: []
`;

exports[`org/parser parses nested lists 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "plain-list"
        indent: 0
        children:
          - type: "item"
            indent: 0
            children:
              - type: "paragraph"
                children:
                  - type: "text"
                    value: "there\\n"
              - type: "plain-list"
                indent: 2
                children:
                  - type: "item"
                    indent: 2
                    children:
                      - type: "paragraph"
                        children:
                          - type: "text"
                            value: "nested\\n"
                  - type: "item"
                    indent: 2
                    children:
                      - type: "paragraph"
                        children:
                          - type: "text"
                            value: "list"
`;

exports[`org/parser parses regular link 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "link"
            linkType: "fuzzy"
            rawLink: "link"
            children:
              - type: "text"
                value: "text"
`;

exports[`org/parser parses regular link with longer link slash 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "link"
            linkType: "fuzzy"
            rawLink: "longlink"
            children:
              - type: "text"
                value: "text"
`;

exports[`org/parser parses single headline 1`] = `
type: "root"
children:
  - type: "headline"
    level: 1
    title:
      - type: "text"
        value: "Hello"
    children: []
`;

exports[`org/parser parses single-item list 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "plain-list"
        indent: 0
        children:
          - type: "item"
            indent: 0
            children:
              - type: "paragraph"
                children:
                  - type: "text"
                    value: "hi"
`;

exports[`org/parser parses single-line section 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "text"
            value: "hi"
`;

exports[`org/parser parses two empty lines breaking list 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "plain-list"
        indent: 0
        children:
          - type: "item"
            indent: 0
            children:
              - type: "paragraph"
                children:
                  - type: "text"
                    value: "list1\\n"
      - type: "plain-list"
        indent: 0
        children:
          - type: "item"
            indent: 0
            children:
              - type: "paragraph"
                children:
                  - type: "text"
                    value: "list 2"
`;

exports[`org/parser parses two links in one line 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "paragraph"
        children:
          - type: "link"
            linkType: "fuzzy"
            rawLink: "link1"
            children:
              - type: "text"
                value: "text1"
          - type: "text"
            value: " "
          - type: "link"
            linkType: "fuzzy"
            rawLink: "link2"
            children:
              - type: "text"
                value: "text2"
`;

exports[`org/parser parses two-item list 1`] = `
type: "root"
children:
  - type: "section"
    children:
      - type: "plain-list"
        indent: 0
        children:
          - type: "item"
            indent: 0
            children:
              - type: "paragraph"
                children:
                  - type: "text"
                    value: "hi\\n"
          - type: "item"
            indent: 0
            children:
              - type: "paragraph"
                children:
                  - type: "text"
                    value: "there"
`;
